fix:处理流程切换岗位获取数据错误的问题