@@ -67,7 +67,7 @@ public class TrustDirFilter implements Filter {
         try {
             URL url = WebUtils.normalizedURL(urlPath);
             if ("file".equals(url.getProtocol().toLowerCase(Locale.ROOT))) {
-                String filePath = URLDecoder.decode(url.getPath(), StandardCharsets.UTF_8.name());
+                String filePath = URLDecoder.decode(url.getPath(), StandardCharsets.UTF_8);
                 if (OSUtils.IS_OS_WINDOWS) {
                     filePath = filePath.replace("/", "\\\\");
                 }
